[package]
name = "mwc_random_seed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = {version="0.11.8", features=["cuda-12040"]}


[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
